<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="9dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    app:contentPadding="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="138dp">


        <ImageView
            android:id="@+id/item_image"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@null"
            app:circularflow_radiusInDP="20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.214"
            app:srcCompat="@drawable/ecoparque_tigua" />

        <TextView
            android:id="@+id/item_title"
            style="@style/Texto_Titulo_Sitio"
            android:layout_width="177dp"
            android:layout_height="19dp"
            android:layout_marginTop="16dp"
            android:text="@string/nombre_sitio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toEndOf="@+id/item_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_detail"
            style="@style/Texto_normal"
            android:layout_width="170dp"
            android:layout_height="64dp"
            android:layout_below="@+id/item_title"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/item_image"
            android:text="@string/descripcion_sitio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toEndOf="@+id/item_image"
            app:layout_constraintTop_toBottomOf="@+id/item_title" />

        <TextView
            android:id="@+id/item_puntaje"
            style="@style/Texto_normal_Titulo"
            android:layout_width="88dp"
            android:layout_height="17dp"
            android:layout_below="@+id/item_detail"
            android:layout_toEndOf="@+id/item_image"
            android:text="@string/puntaje_sitio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toEndOf="@+id/item_image"
            app:layout_constraintTop_toBottomOf="@+id/item_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>